--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -39,6 +39,16 @@
 	</div>
 </div>
 
+<script>
+	if($("#wrapper2").length > 0){
+    	$("#wrapper2").height(document.documentElement.offsetHeight - $("#header-wrapper").outerHeight() - $("#copyright").outerHeight())
+    }
+    $(".main-form").height($("#wrapper2").height())
+  	if $(".step-field").length > 0 {
+    	$(".step-field").height(document.documentElement.offsetHeight - $("#header-wrapper").outerHeight() - 140)
+    }
+</script>
+
 <% if @method == "reload"%>
 	<% if @test == "1"%>
 	  	<script>
